crates/macros/tests/ui/fail/mut_self_receiver.rs
#[fittings::service]
trait MutSelfReceiverService {
    async fn hello(&mut self, params: ()) -> Result<(), fittings::FittingsError>;
}

fn main() {}
